--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import { Header } from "../components";
-import { ViewTransitions } from "astro:transitions"
+import { Header, Footer } from "../components";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
   title: string;
@@ -25,46 +25,97 @@ const { title } = Astro.props;
     <div class="p-2 mx-auto container">
       <slot />
     </div>
+    <Footer />
+
+    <style is:global>
+      @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;600;700;800;900&display=swap");
+      /* Import from ./public/Geist/GeistVF.woff2 */
+
+      @font-face {
+        font-family: "GeistVF";
+        src: url("/Geist/GeistVF.woff2") format("woff2");
+        font-weight: 100;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      .font-inter {
+        font-family: "Inter", sans-serif;
+      }
+      .font-pacifico {
+        font-family: "Pacifico", cursive;
+      }
+
+      .font-roboto {
+        font-family: "Roboto", sans-serif;
+      }
+
+      .generic-hover {
+        @apply transition duration-200 hover:brightness-90;
+      }
+
+      ::selection {
+        /* Code for Firefox */
+        @apply bg-sakura-700/25 text-sakura-100;
+      }
+      ::-moz-selection {
+        /* Code for Firefox */
+        @apply bg-sakura-700/25 text-sakura-100;
+      }
+
+      .generic-disabled {
+        @apply disabled:brightness-75 disabled:cursor-not-allowed;
+      }
+
+      :root {
+        --accent: 136, 58, 234;
+        --accent-light: 224, 204, 250;
+        --accent-dark: 49, 10, 101;
+        --accent-gradient: linear-gradient(
+          45deg,
+          rgb(var(--accent)),
+          rgb(var(--accent-light)) 30%,
+          white 60%
+        );
+      }
+      html {
+        font-family: system-ui, sans-serif;
+        background: #13151a;
+        background-size: 224px;
+      }
+      code {
+        font-family:
+          Menlo,
+          Monaco,
+          Lucida Console,
+          Liberation Mono,
+          DejaVu Sans Mono,
+          Bitstream Vera Sans Mono,
+          Courier New,
+          monospace;
+      }
+
+      /* Scrollbar */
+      /* width */
+      ::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: transparent;
+      }
+
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        @apply bg-sakura-500/75;
+      }
+
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        @apply bg-sakura-500/50;
+      }
+    </style>
   </body>
 </html>
-<style is:global>
-.generic-hover {
-  @apply transition duration-200 hover:brightness-90;
-}
-
-::-moz-selection, ::selection { /* Code for Firefox */
-  @apply bg-sakura-700/25 text-sakura-100
-}
-
-.generic-disabled {
-  @apply disabled:brightness-75 disabled:cursor-not-allowed;
-}
-
-:root {
-  --accent: 136, 58, 234;
-  --accent-light: 224, 204, 250;
-  --accent-dark: 49, 10, 101;
-  --accent-gradient: linear-gradient(
-    45deg,
-    rgb(var(--accent)),
-    rgb(var(--accent-light)) 30%,
-    white 60%
-  );
-}
-html {
-  font-family: system-ui, sans-serif;
-  background: #13151a;
-  background-size: 224px;
-}
-code {
-  font-family:
-    Menlo,
-    Monaco,
-    Lucida Console,
-    Liberation Mono,
-    DejaVu Sans Mono,
-    Bitstream Vera Sans Mono,
-    Courier New,
-    monospace;
-}
-</style>
