--- a/src/pages/tos.astro
+++ b/src/pages/tos.astro
@@ -2,25 +2,135 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="ToS Page">
-  <div
-    class="flex h-[calc(100svh-75px)] flex-col gap-5 justify-start items-center text-white">
-    <h1
-      transition:name="logo"
-      class="text-4xl font-pacifico text-transparent bg-clip-text bg-gradient-to-bl
-    from-sakura-600 to-sakura-300 relative py-6 px-2 tracking-wider pointer-events-none select-none">
-      <span
-        class="text-white absolute right-[20px] top-[5px] text-[1rem] rotate-45 select-none"
-        >🌸
-      </span>
-      <div
-        class="absolute left-0 top-0 w-full h-full bg-sakura-300/10 blur-xl rounded-full -z-10">
-      </div>
-       Yuuko
+<Layout title="Privacy Policy">
+  <div class="text-white">
+    <h1 class="text-4xl mt-5 text-sakura-500">
+      <strong>Yuuko - Terms of Service</strong>
     </h1>
-    <p transition:animate="fade" class="text-lg tracking-wide">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi debitis in quasi quod laborum necessitatibus, porro asperiores assumenda distinctio dignissimos, itaque libero? Odit, ratione? Esse ut numquam modi, rem id soluta aspernatur delectus quis quos. Minus nam corrupti accusamus deleniti facere! Perferendis, a harum! Quam asperiores natus cum ea vero enim quidem tempora quaerat, ex obcaecati quod hic commodi magnam rem consequatur labore provident quia veritatis eaque eius delectus iste deleniti iure quibusdam. Ullam animi sequi, adipisci voluptate vero dolorem sapiente molestias ipsum excepturi incidunt repellat aperiam vel. Unde veniam omnis quidem ipsum deleniti quod dolore maxime reprehenderit expedita ipsa.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi debitis in quasi quod laborum necessitatibus, porro asperiores assumenda distinctio dignissimos, itaque libero? Odit, ratione? Esse ut numquam modi, rem id soluta aspernatur delectus quis quos. Minus nam corrupti accusamus deleniti facere! Perferendis, a harum! Quam asperiores natus cum ea vero enim quidem tempora quaerat, ex obcaecati quod hic commodi magnam rem consequatur labore provident quia veritatis eaque eius delectus iste deleniti iure quibusdam. Ullam animi sequi, adipisci voluptate vero dolorem sapiente molestias ipsum excepturi incidunt repellat aperiam vel. Unde veniam omnis quidem ipsum deleniti quod dolore maxime reprehenderit expedita ipsa.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi debitis in quasi quod laborum necessitatibus, porro asperiores assumenda distinctio dignissimos, itaque libero? Odit, ratione? Esse ut numquam modi, rem id soluta aspernatur delectus quis quos. Minus nam corrupti accusamus deleniti facere! Perferendis, a harum! Quam asperiores natus cum ea vero enim quidem tempora quaerat, ex obcaecati quod hic commodi magnam rem consequatur labore provident quia veritatis eaque eius delectus iste deleniti iure quibusdam. Ullam animi sequi, adipisci voluptate vero dolorem sapiente molestias ipsum excepturi incidunt repellat aperiam vel. Unde veniam omnis quidem ipsum deleniti quod dolore maxime reprehenderit expedita ipsa.
+    <p class="text-gray-400 mb-5">
+      <strong>Last Updated: November 1, 2023</strong>
     </p>
-    <!-- <Card  body="This is an example anilist card" href="#" title="Anilist Integration"/> -->
+    <div class="flex flex-col gap-2 mb-5">
+      <h2><strong>1. Acceptance of Terms</strong></h2>
+      <p>
+        By using the Yuuko Discord bot, you agree to comply with these Terms of
+        Service. If you do not agree with these terms, please refrain from using
+        the bot.
+      </p>
+      <h2><strong>2. Eligibility</strong></h2>
+      <p>
+        To use Yuuko, you must comply with the minimum age requirements set by
+        Discord and AniList. If you do not meet these specified age
+        requirements, please discontinue your use of the bot.
+      </p>
+      <h2><strong>3. User Responsibilities</strong></h2>
+      <p>
+        When using Yuuko, you are responsible for your actions and behaviors.
+        You must not engage in any of the following activities:
+      </p>
+      <ul>
+        <li>Harassment, spam, or any form of abusive behavior.</li>
+        <li>Misuse of commands or any unauthorized use.</li>
+        <li>Violation of any Discord or AniList terms of service or community guidelines.</li>
+      </ul>
+      <h2><strong>4. Usage Guidelines</strong></h2>
+      <p>
+        Yuuko provides information about anime, manga, anime studios,
+        characters, and other AniList-related data. Users can also receive
+        personalized recommendations by supplying their AniList token. Users are
+        encouraged to use the bot for legitimate, non-abusive purposes.
+      </p>
+      <h2><strong>5. API Token Abuse</strong></h2>
+      <p>
+        To ensure the availability of Yuuko and to respect the resources we
+        allocate, you are strictly prohibited from abusing the commands that
+        consume API tokens. Excessive or abusive use may result in permanent
+        banning from using Yuuko.
+      </p>
+      <h2><strong>6. Privacy Policy</strong></h2>
+      <p>
+        For information on how Yuuko collects, uses, and protects personal data,
+        please refer to our <a class="text-sakura-500 generic-hover" href="/privacy">Privacy Policy</a>.
+        By using Yuuko, you acknowledge and agree to the terms
+        and practices outlined in our Privacy Policy.
+      </p>
+      <h2><strong>7. Intellectual Property</strong></h2>
+      <p>
+        Yuuko is an open-source bot using the MIT permissive license. The
+        bot&#39;s code and related materials are available for modification and
+        distribution under the terms of this license. For more details, review
+        the <a class="text-sakura-500 generic-hover" href="https://github.com/YuuCorp/Yuuko/blob/main/LICENSE">MIT License</a>.
+      </p>
+      <h2><strong>8. Termination of Service</strong></h2>
+      <p>
+        We reserve the right to terminate your access to Yuuko if you violate
+        these Terms of Service or engage in any behavior that is harmful to
+        other users or the bot.
+      </p>
+      <h2><strong>9. Disclaimers</strong></h2>
+      <p>
+        Yuuko is provided &quot;as is,&quot; and we make no warranties regarding
+        its functionality, availability, or the accuracy of the information it
+        provides. We are not responsible for any damage or loss incurred through
+        the use of the bot.
+      </p>
+      <h2><strong>10. Liability</strong></h2>
+      <p>
+        We shall not be held liable for any disputes or issues arising from your
+        use of Yuuko. By using the bot, you agree to release us from any
+        liability.
+      </p>
+      <h2><strong>11. Changes to Terms</strong></h2>
+      <p>
+        We may update or modify these Terms of Service at any time. Any changes
+        will be communicated through the bot or our official server. Continued
+        use of Yuuko after such changes constitutes acceptance of the modified
+        terms.
+      </p>
+      <h2><strong>12. Contact Information</strong></h2>
+      <p>
+        If you have questions or concerns regarding these Terms of Service or
+        Yuuko's usage, you can contact us at
+        <a class="text-sakura-500 generic-hover" href="mailto:hello@yuuko.sh">hello@yuuko.sh</a>.
+      </p>
+      <h2><strong>13. Dispute Resolution and Waiver of Right to Sue</strong></h2>
+      <p>
+        To resolve any disputes or claims related to these Terms of Service,
+        your use of Yuuko, or any other matter, you agree to first engage in
+        good-faith negotiations with us. If a resolution cannot be reached
+        through negotiation, both you and we agree to waive the right to
+        initiate legal action, including lawsuits, against the developers,
+        maintainers, or contributors to Yuuko.
+      </p>
+      <p>
+        Instead, all disputes shall be subject to binding arbitration conducted
+        in accordance with the rules and procedures of a mutually agreed-upon
+        arbitration service or institution. The arbitrator&#39;s decision will
+        be final and binding, and judgment upon the award rendered by the
+        arbitrator may be entered in any court having jurisdiction thereof. This
+        waiver of the right to sue and the use of arbitration extend to the
+        maximum extent permitted by applicable laws.
+      </p>
+      <h2><strong>14. Effective Date</strong></h2>
+      <p>These Terms of Service were last updated on November 1, 2023.</p>
+      <h2><strong>15. Acceptance Mechanism</strong></h2>
+      <p>
+        By using Yuuko or any of its commands, you acknowledge your acceptance
+        of these Terms of Service.
+      </p>
+    </div>
   </div>
 </Layout>
+
+<style>
+h2 {
+  @apply text-2xl mt-6 text-sakura-400 pb-1 before:content-['>\00a0'] underline underline-offset-8;
+}
+p > strong {
+  @apply text-sakura-200;
+}
+
+li {
+  @apply list-disc list-inside;
+}
+</style>
