fix: Change YuuCorp:tm: label to YuuCorp Contributors

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
   <div class="w-full p-4 md:flex md:items-center md:justify-between">
     <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
       >© 2023 <a href="https://github.com/YuuCorp/" class="hover:underline"
-        >YuuCorp™</a
+        >YuuCorp Contributors</a
       >. All Rights Reserved.
     </span>
     <ul
