style: Header now looks much better on mobile

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="flex h-[75px] flex-row justify-between items-center container mx-auto">
+  class="flex h-[75px] flex-row justify-between items-center container mx-auto px-5">
   <a
     href="/"
     class="text-white duration-150 ease-in hover:text-transparent bg-gradient-to-r bg-clip-text from-sakura-400 to-sakura-500 font-black tracking-widest text-2xl select-none">
